--- a/portafolio/portafolio.css
+++ b/portafolio/portafolio.css
@@ -6,6 +6,10 @@
 body{
     width: 100%;
 }
+img:hover{
+transform: scale(1.15);
+}
+
 /* Header */
 nav{
     background-color: black;
@@ -55,13 +59,113 @@ li{
     padding-top: 10px;
 }
 
+/* Proyectos */
+
+#proyectoMain{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: paleturquoise;
+}
+
+#proyectoMain img{
+    border: 2px solid black;
+}
+
+#proyectoMain h2{
+    text-align: center;
+    padding-bottom: 15px;
+}
+
+#h1Proyectos{
+    text-align: center;
+    margin-top: 15px;
+}
+
+#parrafoProyectos{
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+#proyecto1, #proyecto3{
+    margin-left: 5%;
+    margin-right: 30%;
+    text-align: left;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: row;
+}
+
+#proyecto2{
+    margin-left: 30%;
+    margin-right: 5%;
+    text-align: right;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: row;
+}
+
+#textoProyecto1, #textoProyecto3, .logo1 p{
+    padding-left: 30px;
+}
+
+#textoProyecto2, .logo2 p{
+    padding-right: 30px;
+
+}
+
+/* Tecnologías */
+
+#mainTecnologias{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: paleturquoise;
+}
+
+#h1Tecnologias{
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.logo1{
+    margin-left: 100px;
+    margin-right: 40px;
+    text-align: left;
+    margin-bottom: 30px;
+    display: flex;
+}
+
+.logo1 div, .logo2 div{
+    align-items: center;
+    justify-content: center;
+    padding-top: 40px;
+}
+
+.logo1 div h2, .logo2 div h2{
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.logo2{
+    margin-left: 40px;
+    margin-right: 100px;
+    text-align: right;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: end;
+}
+
 /* Formulario  */
 #mainContacto{
     width: 100%;
     background-color: paleturquoise;
     padding-top: 20px;
     padding-bottom: 40px;
-    height:100vh;
+    /* height:100vh; */
 }
 .formulario{	
 	width: 460px; 
